Added markers functionality to map. #24

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- Google maps api -->
-        <script src="https://maps.googleapis.com/maps/api/js?sensor=false" ></script>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places" ></script>
         <script src="scripts/app.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
